--- a/app/event-detail.component.html
+++ b/app/event-detail.component.html
@@ -1,13 +1,13 @@
 <div *ngIf="event">
-  <h2>{{event.name}} details!</h2>
+  <h2>{{event.name}}</h2>
   <div><label>id: </label>{{event.id}}</div>
   <div>
     <label>name: </label>
     <input [(ngModel)]="event.name" placeholder="name"/>
     <label>location: </label>
-    <input [(ngModel)]="event.location" placeholder="name"/>
+    <input [(ngModel)]="event.location" placeholder="location"/>
     <label>date: </label>
-    <input [(ngModel)]="event.date" placeholder="name"/>
+    <input [(ngModel)]="event.date" placeholder="date"/>
   </div>
   <button (click)="goBack()">Back</button>
 </div>
