--- a/app/event-detail.component.html
+++ b/app/event-detail.component.html
@@ -9,5 +9,5 @@
     <label>date: </label>
     <input [(ngModel)]="event.date" placeholder="date"/>
   </div>
-  <button (click)="goBack()">Back</button>
+  <button (click)="save()">Save</button>
 </div>
