--- a/app/events.component.html
+++ b/app/events.component.html
@@ -2,7 +2,10 @@
 <ul class="events">
   <li *ngFor="let event of events"
       [class.selected]="event === selectedEvent"
-      (click)="gotoDetail()">
+      (click)="gotoDetail(event.id)">
     <span class="badge">{{event.id}}</span> {{event.name}}
+  </li>
+  <li (click)="gotoCreate()">
+    <span class="badge">+</span> Create event
   </li>
 </ul>
