--- a/app/events.component.html
+++ b/app/events.component.html
@@ -3,7 +3,7 @@
   <li *ngFor="let event of events"
       [class.selected]="event === selectedEvent"
       (click)="gotoDetail(event.id)">
-    <span class="badge">{{event.id}}</span> {{event.name}}
+    <span class="badge">{{event.id}}</span> {{event.name}}<span (click)="remove(event.id)" class="badge-delete">Delete</span>
   </li>
   <li (click)="gotoCreate()">
     <span class="badge">+</span> Create event
