--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,6 +1,5 @@
 <h1>{{title}}</h1>
 <nav>
-  <a [routerLink]="['/dashboard']">Dashboard</a>
-  <a [routerLink]="['/events']">Events</a>
+  <a [routerLink]="['/points']">Points</a>
 </nav>
 <router-outlet></router-outlet>
