--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,5 +1,9 @@
-<h1>{{title}}</h1>
-<nav>
-  <a [routerLink]="['/points']">Points</a>
-</nav>
-<router-outlet></router-outlet>
+<my-header></my-header>
+
+<section class="container">
+  <div class="row">
+    <div class="col s12">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</section>
