--- a/app/points/points.component.html
+++ b/app/points/points.component.html
@@ -1,11 +1,11 @@
-<h2>My Points</h2>
-<ul class="points">
-  <li *ngFor="let model of list"
-      (click)="gotoDetail(model.ID)">
-    <span class="badge">Point {{model.ID}}</span>
-    <span (click)="remove(model.ID)" class="badge-delete">Delete</span>
-  </li>
-  <li (click)="gotoCreate()">
-    <span class="badge">+</span> Create
+<h4>Points</h4>
+
+<a [routerLink]="['/points/create']" class="waves-effect waves-light btn">New point</a>
+
+<ul class="collection">
+  <li *ngFor="let model of list" class="collection-item">
+    <span>Point {{model.ID}}</span>
+    <a (click)="remove(model.ID)" class="secondary-content delete-link"><i class="small material-icons">delete</i></a>
+    <a [routerLink]="['/points/detail/' + model.ID]" class="secondary-content"><i class="small material-icons">edit</i></a>
   </li>
 </ul>
