--- a/app/points/edit/point-detail.component.html
+++ b/app/points/edit/point-detail.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="model">
-  <h4>Point {{model.ID}}</h4>
-  <div><label>id: </label>{{model.ID}}</div>
+  <h4>Point {{model.id}}</h4>
+  <div><label>id: </label>{{model.id}}</div>
   <div>
-    <input type="number" [(ngModel)]="model.ID" placeholder="id"/>
+    <input type="number" [(ngModel)]="model.id" placeholder="id"/>
     <input type="number" [(ngModel)]="model.lon" placeholder="longitude"/>
     <input type="number" [(ngModel)]="model.lat" placeholder="latitude"/>
   </div>
