--- a/app/points/points.component.html
+++ b/app/points/points.component.html
@@ -4,8 +4,8 @@
 
 <ul class="collection">
   <li *ngFor="let model of list" class="collection-item">
-    <span>Point {{model.ID}}</span>
-    <a (click)="remove(model.ID)" class="secondary-content delete-link"><i class="small material-icons">delete</i></a>
-    <a [routerLink]="['/points/detail/' + model.ID]" class="secondary-content"><i class="small material-icons">edit</i></a>
+    <span>Point {{model.id}}</span>
+    <a (click)="remove(model.id)" class="secondary-content delete-link"><i class="small material-icons">delete</i></a>
+    <a [routerLink]="['/points/detail/' + model.id]" class="secondary-content"><i class="small material-icons">edit</i></a>
   </li>
 </ul>
