added @agm/core, implemented basic maps, added KeyChain

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,6 +4,7 @@
     <a data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a [routerLink]="['/points']">Points</a></li>
+      <li><a [routerLink]="['/map']">Map</a></li>
     </ul>
   </div>
 </nav>
