--- a/src/app/maps/map.component.css
+++ b/src/app/maps/map.component.css
@@ -2,6 +2,14 @@
   width: 100%;
   height: 100%;
   position:absolute;
-  z-index:9999;
+  z-index:9990;
   color:#fff;
+}
+
+.map-toolbox {
+  z-index: 9991;
+}
+
+.marker-info {
+  color: #000000;
 }
