fixed paths delete method

--- a/src/app/maps/map.component.html
+++ b/src/app/maps/map.component.html
@@ -35,7 +35,7 @@
     [paths]="area.paths"
     [editable]="true"
     [draggable]="true"
-    (polyClick)="clickedPaths($event)"
+    (polyClick)="clickedPaths(i)"
     [fillColor]="area.color"
     [strokeColor]="area.color">
   </agm-polygon>
