--- a/src/app/points/create/point-create.component.html
+++ b/src/app/points/create/point-create.component.html
@@ -1,9 +1,15 @@
-<div>
-  <h4>Point</h4>
-  <div><label>id: </label>New</div>
-  <div>
-    <input type="number" [(ngModel)]="model.lon" placeholder="longitude"/>
-    <input type="number" [(ngModel)]="model.lat" placeholder="latitude"/>
+<section class="container">
+  <div class="row">
+    <div class="col s12">
+      <div>
+        <h4>Point</h4>
+        <div><label>id: </label>New</div>
+        <div>
+          <input type="number" [(ngModel)]="model.lng" placeholder="longitude"/>
+          <input type="number" [(ngModel)]="model.lat" placeholder="latitude"/>
+        </div>
+        <button (click)="save()">Create</button>
+      </div>
+    </div>
   </div>
-  <button (click)="save()">Save</button>
-</div>
+</section>
