implemented polygon drawing, markers colors, removed debug logs

--- a/src/app/maps/map.component.css
+++ b/src/app/maps/map.component.css
@@ -13,3 +13,10 @@
 .marker-info {
   color: #000000;
 }
+
+.temp-polyline,
+.temp-point {
+  background: #ffffff;
+  border: 1px solid #ffffff;
+  color: #000000;
+}
