--- a/src/app/maps/map.component.html
+++ b/src/app/maps/map.component.html
@@ -16,13 +16,14 @@
     <li (click)="onToolPick('\uf12d', 'fa-eraser', 'DELETE')"><a class="btn-floating orange"><i class="fa fa-eraser"></i></a></li>
   </ul>
   <ul *ngIf="isToolActive">
-    <li *ngIf="customTool === 'AREA'" (click)="onColorPick('red')"><a class="btn-floating red"><i class="fa fa-eyedropper"></i></a></li>
-    <li *ngIf="customTool === 'AREA'" (click)="onColorPick('green')"><a class="btn-floating green"><i class="fa fa-eyedropper"></i></a></li>
-    <li *ngIf="customTool === 'AREA'" (click)="onColorPick('yellow')"><a class="btn-floating yellow"><i class="fa fa-eyedropper"></i></a></li>
-    <li *ngIf="customTool === 'AREA'" (click)="onColorPick('blue')"><a class="btn-floating blue"><i class="fa fa-eyedropper"></i></a></li>
+    <li (click)="onColorPick('red')"><a class="btn-floating red"><i class="fa fa-eyedropper"></i></a></li>
+    <li (click)="onColorPick('green')"><a class="btn-floating green"><i class="fa fa-eyedropper"></i></a></li>
+    <li (click)="onColorPick('yellow')"><a class="btn-floating yellow"><i class="fa fa-eyedropper"></i></a></li>
+    <li (click)="onColorPick('blue')"><a class="btn-floating blue"><i class="fa fa-eyedropper"></i></a></li>
+    <li (click)="onColorPick('white')"><a class="btn-floating white"><i style="color: #000000;" class="fa fa-eyedropper"></i></a></li>
   </ul>
 </div>
-<agm-map
+<agm-map *ngIf="areas.length > 0 && markers.length > 0"
   [latitude]="lat"
   [longitude]="lng"
   [zoom]="zoom"
@@ -31,14 +32,19 @@
   [styles]="mapStyle"
   (mapClick)="mapClicked($event)">
 
+  <agm-polyline class="temp-polyline" [strokeColor]="'white'" (lineClick)="createPolygon()">
+    <agm-polyline-point *ngFor="let tp of tempPoints" class="temp-point"
+                        [latitude]="tp.lat" [longitude]="tp.lng">
+    </agm-polyline-point>
+  </agm-polyline>
+
   <agm-polygon *ngFor="let area of areas"
     [paths]="area.polygon"
-    [editable]="true"
-    [draggable]="true"
+    [editable]="false"
+    [polyDraggable]="false"
     (polyClick)="clickedPaths(area)"
     [fillColor]="area.color"
-    [strokeColor]="area.color"
-    (polyMouseUp)="polygonDragEnd(area, event)">
+    [strokeColor]="area.color">
   </agm-polygon>
 
   <agm-marker
@@ -48,7 +54,7 @@
       [longitude]="m.lng"
       [iconUrl]="m.label"
       [markerDraggable]="m.draggable"
-      (dragEnd)="markerDragEnd(m, event)">
+      (dragEnd)="markerDragEnd(m, $event)">
 
     <i class="{{m.label}}"></i>
     <agm-info-window>
