--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,12 @@
 <nav>
   <div class="nav-wrapper">
     <a [routerLink]="['/']" class="brand-logo">Angular App</a>
-    <a data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+    <a href="" (click)="onDropDownClick()" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
+      <li><a [routerLink]="['/points']">Points</a></li>
+      <li><a [routerLink]="['/map']">Map</a></li>
+    </ul>
+    <ul class="side-nav" id="mobile-demo">
       <li><a [routerLink]="['/points']">Points</a></li>
       <li><a [routerLink]="['/map']">Map</a></li>
     </ul>
